source/about/css/qr.css
.qr-card {
  /* position: absolute; */
  /* top: 50%; */
  /* left: 50%; */
  width: 200px;
  height: 294px;
  /* margin: -150px; */
  /* float: left; */
  /* perspective: 500px; */
}

.qr-content {
  position: absolute;
  width: 100%;
  height: 100%;
  /* box-shadow: 0 0 15px rgba(0,0,0,0.1); */

  transition: transform 1s;
  transform-style: preserve-3d;
}

.qr-card.hover .qr-content {
  transform: rotateY( 180deg ) ;
  transition: transform 0.5s;
}

.front,
.back {
  position: absolute;
  height: 100%;
  width: 100%;
  /* background: white; */
  /* line-height: 300px; */
  /* color: #03446A; */
  /* text-align: center; */
  /* font-size: 60px; */
  border-radius: 5px;
  backface-visibility: hidden;
}

.back {
  /* background: #03446A; */
  /* color: white; */
  transform: rotateY( 180deg );
}

.img-reset-brightness  {
  filter: brightness(1) !important; 
  -webkit-filter: brightness(1) !important;
}

